--- a/Android Java Retrofit Node Express- Orphanslife/app/src/main/AndroidManifest.xml
+++ b/Android Java Retrofit Node Express- Orphanslife/app/src/main/AndroidManifest.xml
@@ -6,19 +6,56 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:enableOnBackInvokedCallback="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OMS"
+        android:configChanges="orientation|screenSize|screenLayout"
+        android:screenOrientation="unspecified"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ForgotPassword"
+            android:exported="false"
+            android:theme="@style/Theme.Material3.Dark.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".AdminView.Sponsor.NewSponsor"
+            android:exported="false"
+            android:theme="@style/Theme.Material3.Dark.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".AdminView.Role.NewRole"
+            android:exported="false"
+            android:theme="@style/Theme.Material3.Dark.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".AdminView.AdoptRequest.NewAdoptRequest"
+            android:exported="false"
+            android:launchMode="standard"
+            android:theme="@style/Theme.Material3.Dark.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".AdminView.AdoptRequest.AdoptRequestsTableDetails"
             android:exported="false"
@@ -27,7 +64,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.AdoptRequest.AdoptRequestsTableListAdapter"
             android:exported="false"
@@ -36,7 +72,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.AdoptRequest.AdoptRequestsTable"
             android:exported="false"
@@ -45,7 +80,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".SponsorView.OrphanageActivitiesListAdapter"
             android:exported="false"
@@ -54,7 +88,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Location.LocationsTableDetails"
             android:exported="false"
@@ -63,7 +96,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Location.LocationsTableListAdapter"
             android:exported="false"
@@ -72,7 +104,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.DonationsTableDetails"
             android:exported="false"
@@ -81,7 +112,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.DonationsTableListAdapter"
             android:exported="false"
@@ -90,7 +120,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Location.LocationsTable"
             android:exported="false"
@@ -99,7 +128,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.DonationsTable"
             android:exported="false"
@@ -108,7 +136,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".OrphanageActivities.OrphanageActivitiesTableListAdapter"
             android:exported="false"
@@ -117,7 +144,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".OrphanageActivities.OrphanageActivitiesTableDetails"
             android:exported="false"
@@ -126,7 +152,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".OrphanageActivities.OrphanageActivitiesTable"
             android:exported="false"
@@ -135,7 +160,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".VolunteerView.VolunteerHome"
             android:exported="false"
@@ -144,7 +168,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".GuardianView.GuardianHome"
             android:exported="false"
@@ -153,7 +176,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".orphanage.OrphanagesTableDetails"
             android:exported="false"
@@ -162,7 +184,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".orphanage.OrphanagesTableListAdapter"
             android:exported="false"
@@ -171,7 +192,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".orphanage.OrphanagesTable"
             android:exported="false"
@@ -180,7 +200,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Role.RolesTableDetails"
             android:exported="false"
@@ -189,7 +208,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Role.RolesTableListAdapter"
             android:exported="false"
@@ -198,7 +216,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Role.RolesTable"
             android:exported="false"
@@ -207,7 +224,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Child.ChildsTableDetails"
             android:exported="false"
@@ -216,7 +232,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Child.ChildsTableListAdapter"
             android:exported="false"
@@ -225,7 +240,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Child.ChildsTable"
             android:exported="false"
@@ -234,7 +248,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.AdoptiveStatus.AdoptiveStatusTableDetails"
             android:exported="false"
@@ -243,7 +256,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.AdoptiveStatus.AdoptiveStatusTableListAdapter"
             android:exported="false"
@@ -252,7 +264,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.AdoptiveStatus.AdoptiveStatusTable"
             android:exported="false"
@@ -261,7 +272,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Admin.AdminTableDetails"
             android:exported="false"
@@ -270,7 +280,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Admin.AdminsTableListAdapter"
             android:exported="false"
@@ -279,7 +288,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Admin.AdminsTable"
             android:exported="false"
@@ -288,7 +296,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Sponsor.SponsorTableDetails"
             android:exported="false"
@@ -297,7 +304,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.Sponsor.SponsorsTable"
             android:exported="false"
@@ -306,7 +312,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".AdminView.AdminHome"
             android:exported="false"
@@ -315,7 +320,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".OrphanageActivities.AddOrphanageActivities"
             android:exported="false"
@@ -324,7 +328,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".SponsorView.donation.DonationDetails"
             android:exported="true"
@@ -333,7 +336,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".SponsorView.Adopt"
             android:exported="true"
@@ -342,7 +344,6 @@
                 android:name="Complete Parent Details"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".SponsorView.Donate"
             android:exported="true"
@@ -351,7 +352,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".Register"
             android:exported="true"
@@ -360,7 +360,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".LoginFragment"
             android:exported="true"
@@ -369,21 +368,29 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
+        <activity
+            android:name=".RegisterFragment"
+            android:exported="true"
+            android:theme="@style/Theme.Material3.Dark.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".Splash"
             android:exported="true"
-            android:theme="@style/Theme.Material3.Dark.NoActionBar">
+            android:theme="@style/Theme.Material3.Dark.NoActionBar"
+            android:windowSoftInputMode="adjustPan|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".SponsorView.SponsorHome"
             android:exported="true"
@@ -392,7 +399,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -401,6 +407,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
     </application>
+
 </manifest>
