--- a/Node Express - API - Orphanslife/package.json
+++ b/Node Express - API - Orphanslife/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
     "ws": "^8.12.0"
   },
   "scripts": {
