--- a/React - website Orphanslife/package.json
+++ b/React - website Orphanslife/package.json
@@ -5,21 +5,20 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.10",
+    "@mui/lab": "^5.0.0-alpha.126",
+    "@mui/material": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.1.2",
-    "bootstrap": "^5.2.3",
-    "jquery": "^3.6.3",
+    "axios": "^1.3.5",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
-    "react-router-dom": "^6.7.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "ws": "^8.12.0"
+    "reactjs-popup": "^2.0.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "PORT=80 ./node_modules/.bin/react-scripts start",
@@ -28,9 +27,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.16",
-    "concurrently": "^7.6.0",
-    "react-scripts": "^2.1.3"
+    "concurrently": "^7.6.0"
   },
   "eslintConfig": {
     "extends": [
