--- a/Node Express - API - Orphanslife/package.json
+++ b/Node Express - API - Orphanslife/package.json
@@ -21,9 +21,9 @@
     "ws": "^8.12.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "react": "npm start --prefix client",
-    "dev": "concurrently \"npm run start\" \"npm run react\"",
+    "dev": "concurrently \"npm run start\" \"npm run react\" \"nodemon index.js\"",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "echo \"Error: no test specified\" && exit 1"
