--- a/React - website Orphanslife/package.json
+++ b/React - website Orphanslife/package.json
@@ -8,17 +8,23 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.126",
     "@mui/material": "^5.12.0",
+    "@mui/x-date-pickers": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.7",
+    "os": "^0.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-otp-input": "^3.0.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -28,7 +34,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "concurrently": "^7.6.0"
+    "concurrently": "^7.6.0",
+    "local-ip-url": "^1.0.6"
   },
   "eslintConfig": {
     "extends": [
