--- a/React - website Orphanslife/package.json
+++ b/React - website Orphanslife/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.3.5",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
+    "jquery": "^3.6.4",
     "os": "^0.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-icons": "^4.8.0",
     "react-otp-input": "^3.0.1",
     "react-router-dom": "^6.10.0",
@@ -34,6 +36,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "concurrently": "^7.6.0",
     "local-ip-url": "^1.0.6"
   },
