--- a/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/AndroidManifest.xml
+++ b/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/AndroidManifest.xml
@@ -15,10 +15,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.view.LoginActivity"
             android:exported="true"
-            android:launchMode="singleTask"
-            android:label="@string/title_activity_login">
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
