--- a/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/AndroidManifest.xml
+++ b/Android Kotlin Retrofit Node Express- Orphanslife/app/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
         </activity>
 
         <activity
+            android:name=".ui.view.settings.AdminAccountSettings"
+            android:exported="false"
+            android:launchMode="singleTask">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <activity
             android:name=".ui.view.volunteer.VolunteerHome"
             android:exported="false"
             android:launchMode="singleTask">
@@ -54,13 +63,11 @@
         <activity
             android:name=".ui.view.LoginActivity"
             android:exported="true"
-            android:launchMode="singleTask">
+            android:launchMode="standard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
