react-native android, iOs & Web fixed

--- a/React-Native Mongo Express - Orphanslife/android/app/build.gradle
+++ b/React-Native Mongo Express - Orphanslife/android/app/build.gradle
@@ -113,13 +113,13 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.orphanslife"
+    namespace 'com.kaligotla.orphanslife'
     defaultConfig {
-        applicationId "com.orphanslife"
+        applicationId 'com.kaligotla.orphanslife'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
 
     splits {
