--- a/React-Native Mongo Express - Orphanslife/package.json
+++ b/React-Native Mongo Express - Orphanslife/package.json
@@ -9,36 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^18.0.4",
-    "@react-native-community/checkbox": "^0.5.15",
-    "@react-native-masked-view/masked-view": "0.2.8",
+    "@expo/webpack-config": "18.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/drawer": "6.4.1",
-    "@react-navigation/elements": "1.3.3",
-    "@react-navigation/material-bottom-tabs": "6.2.1",
-    "@react-navigation/material-top-tabs": "6.2.1",
-    "@react-navigation/native": "6.0.10",
-    "@react-navigation/native-stack": "^6.9.12",
-    "@react-navigation/stack": "6.2.1",
+    "@react-navigation/native": "^6.1.6",
+    "@types/react": "~18.0.27",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
-    "expo-screen-orientation": "~5.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-device-info": "^10.6.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-pager-view": "6.1.2",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-redash": "^18.1.0",
+    "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
-    "react-native-tab-view": "^3.5.1",
+    "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "react-navigation": "^4.4.4"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
