--- a/MongoDB Express - API - Orphanslife/package.json
+++ b/MongoDB Express - API - Orphanslife/package.json
@@ -3,10 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "main": "index.js",
+  "scripts": {
+    "api": "nodemon ./API_Auth/API_Auth.js",
+    "admin": "nodemon ./Services/Service_Admin/Service_Admin_Index.js",
+    "sponsor": "nodemon ./Services/Service_Sponsor/Service_Sponsor_Index.js",
+    "orphanage": "nodemon ./Services/Service_Orphanage/Service_Orphanage_Index.js",
+    "business": "nodemon ./Services/Service_Business/Service_Business_Index.js",
+    "extras": "nodemon ./Services/Service_Extras/Service_Extras_Index.js",
+    "start": "concurrently \"npm run api\" \"npm run admin\" \"npm run business\" \"npm run extras\" \"npm run orphanage\"",
+    "stop": "concurrently \"sudo lsof -t -i tcp:80 -s tcp:listen | sudo xargs kill\" \"sudo lsof -t -i tcp:1000 -s tcp:listen | sudo xargs kill\" \"sudo lsof -t -i tcp:2000 -s tcp:listen | sudo xargs kill\" \"sudo lsof -t -i tcp:3000 -s tcp:listen | sudo xargs kill\" \"sudo lsof -t -i tcp:4000 -s tcp:listen | sudo xargs kill\" \"sudo lsof -t -i tcp:6000 -s tcp:listen | sudo xargs kill\"",
+    "react": "npm start --prefix client",
+    "dev": "concurrently \"npm run react\" \"npm run start\"",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "aws-sdk": "^2.1299.0",
-    "bcrypt": "^5.1.0",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
@@ -14,6 +27,7 @@
     "express": "^4.18.2",
     "formidable": "^2.1.1",
     "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
@@ -24,14 +38,6 @@
     "os": "^0.1.2",
     "passport-local-mongoose": "^8.0.0",
     "ws": "^8.12.0"
-  },
-  "scripts": {
-    "start": "node index.js",
-    "react": "npm start --prefix client",
-    "dev": "concurrently \"npm run start\" \"npm run react\" \"nodemon index.js\"",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "eslintConfig": {
     "extends": [
